src/test/deca/codegen/valid/rvalue_init_float_to_int_inclass.deca
// Test rule 3.28: 

class A {
    float f = 3; 
}

{
    A a = new A();
    println(a.f); 
}




