src/test/deca/codegen/invalid/methodcall_in_methodcall.deca

class A {

    boolean equals(Object other) {
        return this.equals(other);
    }
}

{
    A a = new A();
    a.equals(a);
}
